# financial-times

./: Cargo.toml  Dockerfile  README.md  package-lock.json  package.json
.github/workflows/: build.yaml
config/: default.json
src/: bot.js  main.rs  slack.rs  stocks.rs
src/clients/: alphaAdvantage.js  apple.js  iex.js
src/format/: slack.js
src/slack/: commands.rs  events.rs  interactions.rs  oauth.rs
v1/: Dockerfile  package-lock.json  package.json
v1/src/: bot.js
v1/src/clients/: apple.js
v1/src/format/: slack.js
